--- a/view/register.html
+++ b/view/register.html
@@ -14,6 +14,7 @@
 	<div style="position: relative;width: 100%;min-width: 1200px;">
 			<img src="../img/background-jpg.jpg" style="margin-top: -55px;width: 100%;min-height: 768px;" />
 			<form class="regist" id="regist"  method="get" action="">
+			  <div class="regist_small ">
 				<img src="../img/logo-1.png" class="regist_img"/>
 				<p class="line">
 					<input  type="password" style="position: absolute; top: -999px" />
@@ -44,6 +45,7 @@
 				<p class="regist_p"><a style="color:#000000" :href="path.TemprootPath + '/view/login.html'">立即登入</a></p>
 				<a class="btn btn_submit btn_a">注册</a>
 				<div id="popup-captcha"></div>
+				</div>
 			</form>
 		</div>
 	<myfooter></myfooter>
