--- a/css/read_book.css
+++ b/css/read_book.css
@@ -44,8 +44,8 @@ font-size:inherit;text-rendering:auto;
 }
 .read_alert {
   position: fixed;
-  top: 300px;
-  left: 850px;
+  top: 25%;
+  left: 45%;
   width: 230px;
   height: 60px;
   background-color: white;
@@ -293,8 +293,9 @@ font-size:inherit;text-rendering:auto;
 }
 .book-tool {
 	position: fixed;
-	bottom: 150px;
-	
+	bottom: 22%;
+	right: 23%;
+	z-index: 99999;
 
 }
 .book-tool a {
