--- a/css/register.css
+++ b/css/register.css
@@ -2,19 +2,24 @@ body li{
 	list-style:none;
 }
 .regist {
-	width: 367px;
-	height: 510px;
-	border: 1px solid #6c4274;
-	border-radius: 10px;
-	box-shadow: 0 3px 9px rgba(0,0,0,.5);
-	position: absolute;
-	top: 100px;
-	right: 330px;
-	display: none;
-}	
+  width: 367px;
+  
+
+  position: absolute;
+  top: 100px;
+  right: 330px;
+  display: none;
+} 
+.regist .regist_small {
+  border: 1px solid #6c4274;
+  border-radius: 10px;
+  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+  margin-top: 25px;
+  height: 510px;
+}
 .regist .regist_img {
-	float: right;
-	margin: -25px 10px 0 0;
+  float: right;
+  margin: -25px 10px 0 0;
 }
 .regist .line {
 	margin-top: 5px;
