--- a/view/catalog.html
+++ b/view/catalog.html
@@ -29,8 +29,8 @@
 				</ul>
 				<div class="text_brief">
 						<p class="text_brief_p" title="{{introduction}}">简介：
-							<span style="font-size: 12px; display: inline-block;">{{introduction}}</p>
-						</span>
+							{{introduction}}</p>
+						
 					<div class="text_type" >
 						<ul>
 							<li>分类：</li>
