--- a/css/main.css
+++ b/css/main.css
@@ -568,7 +568,7 @@ a {
   clear: both;
 }
 
-.confirmBlock {
+      .confirmBlock {
   z-index: 999999;
   overflow: auto;
   display: block;
@@ -586,7 +586,7 @@ a {
   display: block;
   position: absolute;
   top: 30%;
-  width: 400px;
+  width: 350px;
   min-height: 150px;
   left: 50%;
   margin-bottom: 20%;
@@ -597,29 +597,14 @@ a {
   height: 100%;
   position: relative;
   left: -50%;
-  background-color: white;
-  border-radius: 4px 4px  8px 8px;
+  background-image: url(../img/confirm_sub.png) ;
   min-height: 150px;
+  
 }
 
-.confirmBlock .confirm_sub .confirm_header {
-  width: 400px;
-  height: 30px;
-  background-color: #f1f1f1;
-  font-size: 16px;
-  padding-left: 10px;
-  line-height: 30px;
-  border-radius: 4px 4px  0 0;
-  color: #585858;
-  border-bottom: 1px #ebebeb solid;
-}
 
-.confirmBlock .confirm_sub  p {
-  text-indent: 2em;
-  font-size: 15px;
-  margin: 20px 15px 0 15px;
-  min-height: 60px;
-}
+
+
 
 .confirmBlock .confirm_sub .true {
   display: inline-block;
@@ -630,32 +615,37 @@ a {
   border-radius: 8px;
   text-align: center;
   line-height: 22px;
-  margin-top: 10px;
+
   cursor: pointer;
-  margin-left: 80px;
+  left: 100px;
   margin-bottom: 15px;
-  margin-top: 15px;
+  top: 115px;
+  position: absolute;
+ 
 }
 
 .confirmBlock .confirm_sub .flast {
   display: inline-block;
   width: 50px;
   height: 22px;
-  color: white;
-  background-color: #9e9e9e;
+  color: #9e9e9e;
+  border:1px solid #9e9e9e;
   border-radius: 8px;
   text-align: center;
   line-height: 22px;
-  margin-top: 10px;
+  position: absolute;
   cursor: pointer;
-  margin-left: 120px;
-}
-
-.confirmBlock .confirm_sub .words {
-  min-height: 50px;
-  width: 400px;
-  min-height: 120px;
-  background-color: white;
-  border-radius: 0 0 8px 8px;
-  position: relative;
+  left: 220px;
+  top: 115px;
+  }
+  .confirmBlock .confirm_sub .words {
+    width: 280px;
+    height: 100px;
+    position: absolute;
+    top: 75px;
+    left: 45px;
+    text-indent: 1em;
+    padding-left:3.5em;
+    font-size: 16px;
+    font-family: "幼圆";
 }
