--- a/css/catalog.css
+++ b/css/catalog.css
@@ -615,7 +615,8 @@
 		}
 		.index .text_input ul {
 			width: 700px;
-			height: 120px;
+			min-height: 80px;
+			margin-bottom: 40px;
 		}
 		.index .text_input ul .user_head {
 			margin-right: 20px;
