--- a/view/catalog.html
+++ b/view/catalog.html
@@ -70,28 +70,37 @@
 				
 				
 				
-				<div class="text_comment">
-						<ul>
-							<li><span>1982</span></li>
-							<li>评论</li>
-						</ul>
-					</div>
-				<div class="text_input">
-					<ul>
-						<li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
-						<li ><textarea></textarea></li>
-						<li class="MessageBtn"><span>发表评论</span></li>
-					</ul>
-					
-					
-					<div class="text_sort active">
-						<ul>
-							<li class="active">默认排序</li>
-							<li>按回复数</li>
-							
-						</ul>
-					</div>
-				</div>
+<div class="text_comment">
+	<ul>
+		<li><span>1982</span></li>
+		<li>评论</li>
+	</ul>
+</div>
+<style>
+  .wangEditor-txt {
+    min-height: 60px !important;
+    height: auto !important;
+    max-height: 300px;
+    border-radius: 8px;
+    max-height: ;
+  }
+</style>
+<div class="text_input">
+	<ul class="clear">
+		<li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
+		<li style="position: relative;float: left;width: 555px;min-height: 60px;"><textarea id="ipt-content-post" required="" spellcheck="false" placeholder="" class="form-control input-sm" style="display: none;"></textarea></li>
+		<li class="MessageBtn btn"><span>发表评论</span></li>
+	</ul>
+	<div class="text_sort active">
+		<ul>
+			<li class="active">默认排序</li>
+			<li>按回复数</li>
+		</ul>
+	</div>
+</div>
+				
+				
+				
 				<div class="CommentArea">
 				 <div class="text_user clear">
 						<a href="javascript:;"><img src="../img/sss8.jpg"/ ></a>
@@ -298,161 +307,253 @@
 					</div>-->
 			</div>
 		</div>
-		<!--<div 
-			v-if="popup" 
-			v-on:click="rewardFn"
-			style="position: fixed;top: 50%;bottom: 0px;left: 0px;right: 0px; ">
-			<div class="reward" >
-				<div class="reward_cancel"><img src="../img/card-8.png"/ v-on:click="rewardShow"></div>
-				<h4>这本书超赞，我要打赏他<span>(づ￣3￣)づ╭❤～</span></h4>
-				<div class="reward_Num">
-					<label>选择打赏的数量：</label>		
-					<ul>	
-						<li><a><img src="../img/card-1.png" />X10</a></li>
-						<li class="reward_Choice"><a><img src="../img/card-2.png" /><img src="../img/card-7.png" class="Choice_img"/>X20</a></li>
-						<li><a><img src="../img/card-3.png" />X30</a></li>
-						<li><a><img src="../img/card-4.png" />X40</a></li>
-						<li><a><img src="../img/card-5.png" />X50</a></li>
-						<li><a><img src="../img/card-6.png" />X60</a></li>
-					</ul>
-					<p><textarea>自定义</textarea>X<img src="../img/card-1.png"/></p>
-					<a class="reward_Pay btn">立刻打赏！</a>
-				</div>	
-				<a class="reward_Recharge">充值></a>
-				<a class="reward_My">我的好人卡：1000</a>
-			</div>
-		</div>-->
+<!--<div 
+	v-if="popup" 
+	v-on:click="rewardFn"
+	style="position: fixed;top: 50%;bottom: 0px;left: 0px;right: 0px; ">
+	<div class="reward" >
+		<div class="reward_cancel"><img src="../img/card-8.png"/ v-on:click="rewardShow"></div>
+		<h4>这本书超赞，我要打赏他<span>(づ￣3￣)づ╭❤～</span></h4>
+		<div class="reward_Num">
+			<label>选择打赏的数量：</label>		
+			<ul>	
+				<li><a><img src="../img/card-1.png" />X10</a></li>
+				<li class="reward_Choice"><a><img src="../img/card-2.png" /><img src="../img/card-7.png" class="Choice_img"/>X20</a></li>
+				<li><a><img src="../img/card-3.png" />X30</a></li>
+				<li><a><img src="../img/card-4.png" />X40</a></li>
+				<li><a><img src="../img/card-5.png" />X50</a></li>
+				<li><a><img src="../img/card-6.png" />X60</a></li>
+			</ul>
+			<p><textarea>自定义</textarea>X<img src="../img/card-1.png"/></p>
+			<a class="reward_Pay btn">立刻打赏！</a>
+		</div>	
+		<a class="reward_Recharge">充值></a>
+		<a class="reward_My">我的好人卡：1000</a>
+	</div>
+</div>-->
 
-	  <myfooter></myfooter>
-	<script src="../js/apis/vueHttp.js"></script>
-  <script src="../js/apis/conf.js"></script>
-	<script type="text/javascript" src="../js/vue.min.js" ></script>
-	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
- 	<script type="text/javascript" src="../js/vue-router.min.js" ></script>
-  <script type="text/javascript" src="../js/components/header.js" ></script>
-  <script type="text/javascript" src="../js/components/footer.js" ></script>
-  <script src="../js/apis/Data.js"></script>
-  <script src="../js/apis/alert.js"></script>
-  <script src="../js/apis/confirm.js"></script>
-  <script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
-	</body>
-	<script>
-		var vuePractice = new Vue({
-			el: '#mask',
-			data: {
-			  bodyFlag: false,
-			  zindex: 0,
-			  path: PathList,
-			  szxj: SZXJ,
-				popup:false,
-				id: '',
-				title: '',
-				words:'',
-				cursor:'',
-				update:'',
-				introduction:'',
-				BookList: [],
-				Booktype:[{typeName:''}],
-				Collection:'',
-				bookCopperCoins:'',
-				authorName:'',
-				autograph:'',
-				booktTitle:[],
-				bookCustom:[],
-				collect: false,
-				attention: false,
-				userId: '',
-				bookId: '',
-				userHead: '', 
-				
-			},
-			methods: {
-			setAttention: function(){
-			  var _data = {};
-			  _data.receiveId = this.userId;
-			  SZXJ.http(this,'post', PathList.saveOrCancelAttention, _data, (response) => {
-			    if (this.attention) {
-			      this.attention = false;
-			    } else {
-			      this.attention = true;
-			    }
-        });
-			},
-			setCollect: function() {
-			  var _data = {};
-        _data.bookId = this.bookId;
-        SZXJ.http(this,'post', PathList.saveOrDeleteBookCollect, _data, (response) => {
-          this.getValueFn()
-        });
-      },
-				nextWorksFn:function() {
-			    // <--
-          this.zindex--;
-          if (Math.abs(this.zindex) >= (this.booktTitle.length - 3)) {
-            this.zindex = -(this.booktTitle.length - 3);
-          }
-			  },
-			  previousWorksFn: function() {
-			     this.zindex++;
-          if (this.zindex >= 0) {
-            this.zindex = 0;
-          }
-			  },
-				getValueFn: function() {
-					    var _data = {};
-            	_data.bookId = this.id;
-			        SZXJ.http(this,'get', PathList.queryBookDirectory, _data, (response) => {
-			        	// 取到数据渲染
-			        	 this.bookCustom = [];
-			        	 
-			        	 this.userHead = response.data.bookCustom.userEntity.userHead;
-			        	 this.bookId = response.data.bookCustom.bookId;
-			        	 this.userId = response.data.bookCustom.userEntity.userId;
-			        	 this.collect= response.data.bookCustom.collect;
-			        	 this.attention = response.data.bookCustom.userEntity.attention;
-			        	 this.bookCustom.push(response.data.bookCustom);
-			        	 this.title = response.data.bookCustom.bookName;
-			        	 this.introduction =response.data.bookCustom.bookIntroduction;
-			        	 this.words =response.data.bookCustom.bookWordCount;
-			        	 this.update = response.data.bookCustom.bookUpdate;
-			        	 this.cursor = response.data.bookCustom.bookHit;
-			        	 this.BookList = response.data.bookCustom.volumeCustomList;
-			        	 this.Booktype =response.data.bookCustom.bookTypeEntityList;
-			        	 this.typeName =response.data.bookCustom.bookTypeName;
-			        	 this.Collection =response.data.bookCustom.bookCollect;
-			        	 this.bookCopperCoins =response.data.bookCustom.bookCopperCoins;
-			        	 this.authorName =response.data.bookCustom.userEntity.userName;
-			        	 this.autograph = response.data.bookCustom.userEntity.information;
-			           console.log(response);
-			        });
-			        
-			        SZXJ.http(this,'get', PathList.findUserOtherBook, _data, (response) => {
-			        	// 取到数据渲染
-			        	this.booktTitle = response.data.userOtherBook;
-			          console.log(response);
-			        });
-			       
-				},
-				rewardFn: function(){
-					this.popup = true;
-				},
-				rewardShow: function(){
-					this.popup = false;
-				}
-			},
-			ready: function() {
-			  this.bodyFlag = true;
-			  var href = window.location.href;
-        this.id = href.substring(href.lastIndexOf('?bookId=') + 8, href.length); 
-	      var str = this.id.toString();
-	      if (str.search(/[^0-9]/g) === -1) {
-			    this.getValueFn();
-        } else {
-			    window.location.href = PathList.TemprootPath + '/index.html';
+<myfooter></myfooter>
+
+<script type="text/javascript" src="../js/jquery-1.11.1.js" ></script>
+<link rel="stylesheet" href="../css/wangEditor.min.css" />
+<script type="text/javascript" src="../js/wangEditor.min.js" ></script>
+
+<script src="../js/apis/vueHttp.js"></script>
+<script src="../js/apis/conf.js"></script>
+<script type="text/javascript" src="../js/vue.min.js" ></script>
+<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
+<script type="text/javascript" src="../js/vue-router.min.js" ></script>
+<script type="text/javascript" src="../js/components/header.js" ></script>
+<script type="text/javascript" src="../js/components/footer.js" ></script>
+<script src="../js/apis/Data.js"></script>
+<script src="../js/apis/alert.js"></script>
+<script src="../js/apis/confirm.js"></script>
+<script type="text/javascript" src="../js/require/headerOrfooter.js"></script>  
+</body>
+<script>
+var vuePractice = new Vue({
+	el: '#mask',
+	data: {
+	  bodyFlag: false,
+	  zindex: 0,
+	  path: PathList,
+	  szxj: SZXJ,
+		popup:false,
+		id: '',
+		title: '',
+		words:'',
+		cursor:'',
+		update:'',
+		introduction:'',
+		BookList: [],
+		Booktype:[{typeName:''}],
+		Collection:'',
+		bookCopperCoins:'',
+		authorName:'',
+		autograph:'',
+		booktTitle:[],
+		bookCustom:[],
+		collect: false,
+		attention: false,
+		userId: '',
+		bookId: '',
+		userHead: '', 
+	},
+	methods: {
+	  editorFn:function() {
+      var textarea = document.getElementById('ipt-content-post');
+      this.editor = new wangEditor(textarea);
+      this.editor.config.uploadImgUrl = PathList.rootPath +　'/content/upload.shtml';
+      this.editor.config.uploadHeaders = {
+        'JSESSIONID': localStorage.getItem('JSESSIONID'),
+      }
+      this.editor.config.menus = [];
+      this.editor.config.emotions = {
+        'default': {
+          title: '轻悦娘',
+          data: [
+            {
+              'icon': PathList.rootPath　+　'/img/不明所以然.jpg',
+              'value': '[不明所以然]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/伤心欲绝.jpg',
+              'value': '[伤心欲绝]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/发呆.jpg',
+              'value': '[发呆]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/吃惊.jpg',
+              'value': '[吃惊]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/哭泣.jpg',
+              'value': '[哭泣]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/害羞.jpg',
+              'value': '[害羞]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/就是那个.jpg',
+              'value': '[就是那个]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/微笑.jpg',
+              'value': '[微笑]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/恼怒.jpg',
+              'value': '[恼怒]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/悲伤.jpg',
+              'value': '[悲伤]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/战斗力渣渣.jpg',
+              'value': '[战斗力渣渣]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/抛媚眼.jpg',
+              'value': '[抛媚眼]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/早就看穿一切.jpg',
+              'value': '[早就看穿一切]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/汗.jpg',
+              'value': '[汗]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/菜刀.jpg',
+              'value': '[菜刀]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/那个有没有.jpg',
+              'value': '[那个有没有]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/震惊.jpg',
+              'value': '[震惊]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/高兴.jpg',
+              'value': '[高兴]'
+            },
+            {
+              'icon': PathList.rootPath　+　'/img/默默地看着.jpg',
+              'value': '[默默地看着]'
+            }
+          ]
         }
-			},
-		});
-		
-
-	</script>
+      };
+      this.editor.create();
+    },
+		setAttention: function(){
+		  var _data = {};
+		  _data.receiveId = this.userId;
+		  SZXJ.http(this,'post', PathList.saveOrCancelAttention, _data, (response) => {
+		    if (this.attention) {
+		      this.attention = false;
+		    } else {
+		      this.attention = true;
+		    }
+      });
+		},
+		setCollect: function() {
+		  var _data = {};
+      _data.bookId = this.bookId;
+      SZXJ.http(this,'post', PathList.saveOrDeleteBookCollect, _data, (response) => {
+        this.getValueFn()
+      });
+    },
+		nextWorksFn:function() {
+      this.zindex--;
+      if (Math.abs(this.zindex) >= (this.booktTitle.length - 3)) {
+        this.zindex = -(this.booktTitle.length - 3);
+      }
+		},
+		previousWorksFn: function() {
+		  this.zindex++;
+      if (this.zindex >= 0) {
+        this.zindex = 0;
+      }
+		},
+	  getValueFn: function() {
+	    var _data = {};
+      _data.bookId = this.id;
+		  SZXJ.http(this,'get', PathList.queryBookDirectory, _data, (response) => {
+		  // 取到数据渲染
+		  this.bookCustom = [];
+		  this.userHead = response.data.bookCustom.userEntity.userHead;
+		  this.bookId = response.data.bookCustom.bookId;
+		  this.userId = response.data.bookCustom.userEntity.userId;
+		  this.collect= response.data.bookCustom.collect;
+		  this.attention = response.data.bookCustom.userEntity.attention;
+		  this.bookCustom.push(response.data.bookCustom);
+		  this.title = response.data.bookCustom.bookName;
+		  this.introduction =response.data.bookCustom.bookIntroduction;
+		  this.words =response.data.bookCustom.bookWordCount;
+		  this.update = response.data.bookCustom.bookUpdate;
+		  this.cursor = response.data.bookCustom.bookHit;
+    	this.BookList = response.data.bookCustom.volumeCustomList;
+		  this.Booktype =response.data.bookCustom.bookTypeEntityList;
+		  this.typeName =response.data.bookCustom.bookTypeName;
+		  this.Collection =response.data.bookCustom.bookCollect;
+		  this.bookCopperCoins =response.data.bookCustom.bookCopperCoins;
+		  this.authorName =response.data.bookCustom.userEntity.userName;
+		  this.autograph = response.data.bookCustom.userEntity.information;
+		  console.log(response);
+		  });
+			SZXJ.http(this,'get', PathList.findUserOtherBook, _data, (response) => {
+      	// 取到数据渲染
+      	this.booktTitle = response.data.userOtherBook;
+        console.log(response);
+      });
+    },
+		rewardFn: function(){
+			this.popup = true;
+		},
+		rewardShow: function(){
+			this.popup = false;
+		}
+	},
+	ready: function() {
+	  this.editorFn();
+	  this.bodyFlag = true;
+	  var href = window.location.href;
+    this.id = href.substring(href.lastIndexOf('?bookId=') + 8, href.length); 
+    var str = this.id.toString();
+    if (str.search(/[^0-9]/g) === -1) {
+	    this.getValueFn();
+    } else {
+	    window.location.href = PathList.TemprootPath + '/index.html';
+    }
+	},
+});
+</script>
 </html>
