--- a/view/catalog.html
+++ b/view/catalog.html
@@ -107,6 +107,7 @@
 							<li class="mes_head_user" >
 								<a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
 								<a href="javascript:;" class="user_Top">置顶</a></li>
+								
 							<li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>	
 							<li>
 							  <ul class="updata_mes">
@@ -216,7 +217,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
-                
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -320,6 +321,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -509,6 +511,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -530,6 +533,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -551,6 +555,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -572,6 +577,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -593,6 +599,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -614,6 +621,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
@@ -635,6 +643,7 @@
             <ul class="mes_head">
               <li class="mes_head_user" >
                 <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
+                <a href="javascript:;" class="user_Top_a">置顶</a></li>
               <li><span class="user_comment" title="">许为知己犹按剑，纵使负心敌难为，敢于世上开冷眼，不为人间浪皱眉。</span></li>  
               <li>
                 <ul class="updata_mes">
