--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1479,6 +1479,7 @@
 .replyAI {
 	float: left;
 	margin: 18px 0 0 0;
+	min-height: 110px;
 }
 
 .replyAI .word1 {
@@ -1499,10 +1500,16 @@
 
 .replyAI1 {
 	margin: 10px 0 10px 5px;
+	min-height: 14px;
+	width: 467px;
+	line-height: 1.3;
 }
 
 .replyAI2 {
 	margin: 15px 0 15px 30px;
+	min-height: 14px;
+  width: 467px;
+  line-height: 1.3;
 }
 .replyAI2:hover .word-reply {
 	display: inline-block;
