--- a/view/catalog.html
+++ b/view/catalog.html
@@ -62,7 +62,6 @@
                       {{ value.contentTitle }}
                   </a>
   							</div>
-  							
   					</div>
 					</div>
 				</div>
@@ -88,9 +87,9 @@
 	<ul class="clear">
 		<li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
 		<li style="position: relative;float: left;width: 555px;min-height: 60px;">
-		  <textarea id="ipt-content-post" required="" spellcheck="false" placeholder="" class="form-control input-sm" style="display: none;"></textarea>
+		  <editor :id="'editor_'" v-ref:editor></editor>
 		</li>
-		<li class="MessageBtn btn"><span>发表评论</span></li>
+		<li class="MessageBtn btn" @click="saveComment"><span>发表评论</span></li>
 	</ul>
 	<div class="text_sort active">
 		<ul>
@@ -108,7 +107,7 @@
         <a v-if="$index === 0" v-else href="javascript:;" class="user_Top">置顶</a>
         <a v-else href="javascript:;" class="user_Top_a">置顶</a>
       </li>
-      <li><span class="user_comment" title="">{{ obj.commentContent }}</span></li>  
+      <li><span class="user_comment" style="display: block;white-space: normal;word-break:break-all;word-wrap:break-word;">{{{ obj.commentContent }}}</span></li>  
       <li>
         <ul class="updata_mes">
             <li class="mess1">{{ szxj.getLocalTime(obj.commentDate / 1000) }}</li>
@@ -126,7 +125,12 @@
       <li class="mes_head_user" >
         <a href="javascript:;" class="user_a" title="">{{ temp.userName }}</a>
       <li>
-        <span class="user_comment"  title=""><label v-if="obj.userId !== temp.userId">回复<span class="aite_user">@{{ temp.replyUserName }}</span></label>{{ temp.replyContent }}</span> 
+        <span class="user_comment"  title="">
+          <label v-if="obj.userId !== temp.userId" >回复<span class="aite_user">@{{ temp.replyUserName }}</span></label>
+           
+          {{{ temp.replyContent }}}
+        
+        </span> 
       </li> 
         
       <li>
@@ -139,40 +143,43 @@
     </ul>
   </div>
   
-  <ul class="Publish">
+  <ul class="Publish" :style="false ? 'visibility: ;':'display: none;'">
     <li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
     <li style="position: relative;float: left;width: 485px;min-height: 60px;">
     <editor :id="'editor_'+$index"></editor>
     </li>
-    <li class="MessageBtn"><span>发表评论</span></li>
+    <li class="MessageBtn btn"><span style="line-height: 26px;">回复</span></li>
   </ul>
   
-  <ul class="text_page clear">
-      <li>共<b>2</b>页</li>
+  <ul class="text_page clear" :style="obj.pageCount > 1 ? 'visibility: ;':'visibility: hidden;'">
+      <li>共<b>{{obj.pageCount}}</b>页</li>
       <li class="page_up">上一页</li>
-      <li class="page_number">1</li>
-      <li class="page_number">2</li>
+      
+      <li v-if="(($index + 1) <= 5 && obj.pageNo < 3 || (($index + 1) > obj.pageNo - 3 &&  $index < obj.pageNo)) || ( (($index + 1) <= obj.pageNo + 2 &&　($index + 1) > obj.pageNo) || (obj.pageNo > obj.pageCount - 3 && ($index + 6) > obj.pageCount) )"
+      :class="objTemp == obj.pageNo? 'active':''" v-for="objTemp in obj.page" @click="setPage1(objTemp)"><a>{{ objTemp }}</a></li>
+      
       <li class="page_next">下一页</li>
   </ul>
   <div class="hr"></div>  
 </div>
         
-        
-        
-         
-           
-      
+
 <div id="page" class="page">
   <ul>
-    <li class="btn" @click="setPage((RequestObj.pageNo - 1) >= 1 ? (RequestObj.pageNo - 1) : 1)"><a>上一页</a></li>
-    <li v-if="(($index + 1) <= 5 && RequestObj.pageNo < 3 || (($index + 1) > RequestObj.pageNo - 3 &&  $index < RequestObj.pageNo)) || ( (($index + 1) <= RequestObj.pageNo + 2 &&　($index + 1) > RequestObj.pageNo) || (RequestObj.pageNo > obj.pageCount - 3 && ($index + 6) > obj.pageCount) )"
-      :class="objTemp == RequestObj.pageNo? 'active':''" v-for="objTemp in page" @click="setPage(objTemp)"><a>{{ objTemp }}</a></li>
-    <li class="btn" @click="setPage((RequestObj.pageNo + 1) <= obj.pageCount ? (RequestObj.pageNo + 1) : obj.pageCount)"><a>下一页</a></li>
+    
+    <li class="btn" @click="setPage((findCommentAndReply.pageNo - 1) >= 1 ? (findCommentAndReply.pageNo - 1) : 1)"><a>上一页</a></li>
+    
+    <li v-if="(($index + 1) <= 5 && findCommentAndReply.pageNo < 3 || (($index + 1) > findCommentAndReply.pageNo - 3 &&  $index < findCommentAndReply.pageNo)) || ( (($index + 1) <= findCommentAndReply.pageNo + 2 &&　($index + 1) > findCommentAndReply.pageNo) || (findCommentAndReply.pageNo > findCommentAndReply.pageCount - 3 && ($index + 6) > findCommentAndReply.pageCount) )"
+      :class="objTemp == findCommentAndReply.pageNo? 'active':''" v-for="objTemp in findCommentAndReply.page" @click="setPage(objTemp)"><a>{{ objTemp }}</a></li>
+    
+    <li class="btn" @click="setPage((findCommentAndReply.pageNo + 1) <= findCommentAndReply.pageCount ? (findCommentAndReply.pageNo + 1) : findCommentAndReply.pageCount)"><a>下一页</a></li>
+    
     <li class="goto">
       <input type="text" v-model="pageNo" style="text-align: center;"/>
-      <span>{{ RequestObj.pageNo }}/{{ obj.pageCount }}</span>
+      <span>{{ findCommentAndReply.pageNo }}/{{ findCommentAndReply.pageCount }}</span>
       <a class="btn" @click="setPage(pageNo)">转页</a>
     </li>
+  
   </ul>
 </div>
         
@@ -192,9 +199,7 @@
 		</li>
 		<li><p class="span_autograph" title="{{autograph}}"><label style="color: black;">签名：</label>{{autograph}}</p></li>
 	</ul>
-	<style>
-		
-	</style>
+	
 	<div class="works">
 		<h3 class="titile_tow">其他作品</h3>
 		<div class="button">
@@ -399,101 +404,90 @@ var vuePractice = new Vue({
 		findCommentAndReply: [], // 评论字段
 	},
 	methods: {
-	  editorFn:function() {
-      var textarea = document.getElementById('ipt-content-post');
-      this.editor = new wangEditor(textarea);
-      this.editor.config.uploadImgUrl = PathList.rootPath +　'/content/upload.shtml';
-      this.editor.config.uploadHeaders = {
-        'JSESSIONID': localStorage.getItem('JSESSIONID'),
+	  setPageCount: function(v) {
+      var obj = this.findCommentAndReply;
+      obj.pageCount =  v;
+      this.page = [];
+      for (var i = 0; i < obj.pageCount; i++) {
+        this.page.push(i+1);
       }
-      console.log(this.editor.config.menus)
-      this.editor.config.menus = ['emotion','img'];
-      this.editor.config.emotions = {
-        'default': {
-          title: '轻悦娘',
-          data: [
-            {
-              'icon': PathList.rootPath　+　'/img/不明所以然.jpg',
-              'value': '[不明所以然]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/伤心欲绝.jpg',
-              'value': '[伤心欲绝]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/发呆.jpg',
-              'value': '[发呆]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/吃惊.jpg',
-              'value': '[吃惊]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/哭泣.jpg',
-              'value': '[哭泣]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/害羞.jpg',
-              'value': '[害羞]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/就是那个.jpg',
-              'value': '[就是那个]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/微笑.jpg',
-              'value': '[微笑]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/恼怒.jpg',
-              'value': '[恼怒]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/悲伤.jpg',
-              'value': '[悲伤]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/战斗力渣渣.jpg',
-              'value': '[战斗力渣渣]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/抛媚眼.jpg',
-              'value': '[抛媚眼]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/早就看穿一切.jpg',
-              'value': '[早就看穿一切]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/汗.jpg',
-              'value': '[汗]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/菜刀.jpg',
-              'value': '[菜刀]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/那个有没有.jpg',
-              'value': '[那个有没有]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/震惊.jpg',
-              'value': '[震惊]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/高兴.jpg',
-              'value': '[高兴]'
-            },
-            {
-              'icon': PathList.rootPath　+　'/img/默默地看着.jpg',
-              'value': '[默默地看着]'
-            }
-          ]
-        }
-      };
-      this.editor.create();
+      this.$set('findCommentAndReply', obj);
     },
-		setAttention: function(){
+    setPage: function(v) {
+      if (!v || v > this.findCommentAndReply.pageCount || v <= 0 || v.toString().search(/[^0-9]/g) !== -1 || parseInt(v) === parseInt(this.findCommentAndReply.pageNo) ) {
+        return;
+      }
+      var obj = this.findCommentAndReply;
+      obj.pageNo = v;
+      this.$set('findCommentAndReply', obj);
+      var _data = {};
+      _data.bookId = this.id;
+      _data.pageNo = v;
+      _data.pageSize = 10;
+      _data.status = 0;
+      this.getComment(_data); // 请求
+    },
+    getComment(_data) {
+      SZXJ.http(this,'get', PathList.findCommentAndReply, _data, (response) => {
+        console.log('评论:');
+        var pageNo;
+        if (this.findCommentAndReply.pageNo) {
+          pageNo = this.findCommentAndReply.pageNo
+          this.setPageCount(pageNo);
+        } else {
+          pageNo = 1;
+        }
+        this.findCommentAndReply = response.data;
+        this.findCommentAndReply.page = []; 
+        console.log(this.findCommentAndReply.pageNo);
+        this.findCommentAndReply.pageNo = pageNo;
+        // 计算评论的总页数
+        if (this.findCommentAndReply.totalCount / _data.pageSize <= 1) {
+          this.findCommentAndReply.pageCount = 1;
+        } else {
+          if (this.findCommentAndReply.totalCount % _data.pageSize === 0) {
+            this.findCommentAndReply.pageCount = this.findCommentAndReply.totalCount / _data.pageSize;
+          } else {
+            this.findCommentAndReply.pageCount = parseInt((this.findCommentAndReply.totalCount / _data.pageSize), 10) + 1;
+          }
+        }
+        for (var i = 0; i < this.findCommentAndReply.pageCount;i++) {
+          this.findCommentAndReply.page.push(i+1);
+        }
+        for (var i = 0; i < this.findCommentAndReply.comment.length;i++) {
+          // 评论楼中楼
+          this.findCommentAndReply.comment[i].page = [];
+          this.findCommentAndReply.comment[i].pageNo = 1;
+          // 计算评论楼中楼回复的总页数
+          if (this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize <= 1) {
+            this.findCommentAndReply.comment[i].pageCount = 1;
+          } else {
+          if (this.findCommentAndReply.comment[i].replyEntityList.length % _data.pageSize === 0) {
+            this.findCommentAndReply.comment[i].pageCount = this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize;
+          } else {
+            this.findCommentAndReply.comment[i].pageCount = parseInt((this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize), 10) + 1;
+          }
+        }
+        for (var j = 1; j <= this.findCommentAndReply.comment[i].pageCount;j++) {
+          this.findCommentAndReply.comment[i].page.push(j);
+        }
+      }
+        });
+    },
+	  saveComment: function() {
+	    var _URL = PathList.saveOrUpdateContent;
+	    console.log(this.$refs.editor);
+	    var editor = this.$refs.editor.getEditor();
+      var _data = {
+        commentContent: editor.$txt.html(), //文本html内容
+        bookId: this.id, // 卷id
+      };
+      SZXJ.http(this,'post', PathList.saveComment, _data, (response) => {
+        editor.$txt.html('');
+        this.getValueFn();
+      });
+	  },
+	  setAttention: function(){
 		  var _data = {};
 		  _data.receiveId = this.userId;
 		  SZXJ.http(this,'post', PathList.saveOrCancelAttention, _data, (response) => {
@@ -557,11 +551,7 @@ var vuePractice = new Vue({
       _data.pageNo = 1;
       _data.pageSize = 10;
       _data.status = 0;
-      SZXJ.http(this,'get', PathList.findCommentAndReply, _data, (response) => {
-        console.log('评论:');
-        this.findCommentAndReply = response.data;
-        console.log(this.findCommentAndReply );
-      });
+      this.getComment(_data);
     },
 		rewardFn: function(){
 			this.popup = true;
@@ -571,7 +561,6 @@ var vuePractice = new Vue({
 		}
 	},
 	ready: function() {
-	  this.editorFn();
 	  this.bodyFlag = true;
 	  var href = window.location.href;
     this.id = href.substring(href.lastIndexOf('?bookId=') + 8, href.length); 
