--- a/view/read_book.html
+++ b/view/read_book.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>QC文学网-阅读页</title>
-		<link rel="stylesheet" href="../css/headerOrFooter.css" />
-		<link rel="stylesheet" href="../css/main.css" />
-		<link rel="stylesheet" href="../css/jquery-ui.min.css" />
-		<link rel="stylesheet" href="../css/read_book.css" />
-<style>
-
-</style>
-<script type="text/javascript" src="../js/vue.js" ></script>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>QC文学网-阅读页</title>
+	<link rel="stylesheet" href="../css/headerOrFooter.css" />
+	<link rel="stylesheet" href="../css/main.css" />
+	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
+	<link rel="stylesheet" href="../css/read_book.css" />
+</head>
 	<body  id="app" @keydown="keyDownFn"
 		v-bind:style="fixed === true? 'font-family: FontAwesome;overflow:hidden':'font-family: FontAwesome;'">
-		<alert v-ref:vue-alert></alert>		
+	<alert v-ref:vue-alert></alert>		
 	<div class="content">
-		<div id="reader" class="reader" style="min-height: 1200px; ">
+		<div id="reader" class="reader" style="min-height: 1200px;">
 			<div class="inner-reader active"
 				:style=" 'min-height: 1200px; background-color:' + bj_color + ';color:' + font_color + ';' +
 				'font-family: '+ font_family + ';'">
@@ -56,22 +52,23 @@
 					<p class="hint-page">按键盘上的 ←（左）键和 →（右）键可以快速切换章节</p>
 				</div>
 				
-        <div id="book-tool" class="book-tool" >
-    <div class="tool-top">
-      <a v-on:click="screenFn"  id="btn-screen-tool" title="全屏" class="fullscreen"><i class="fa fa-expand"></i></a>
-    </div>
-    <div class="tool-bottom">
-      <a v-on:click="gotoCatalogFn" id="btn-menu-tool" title="目录" class="menu" :href="path.TemprootPath + '/view/catalog.html?bookId=' + bookcontent.bookId "><i class="fa fa-list"></i></a>
-      <a v-on:click="settingShow" id="btn-setting" title="设置" class="setting"><i class="fa fa-cog"></i></a>
-      <a v-on:click="lampFn" id="btn-light" title="夜间模式" class="light" ><i class="fa fa-lightbulb-o"></i></a>
-    </div>
-    <div class="tool-bottom">
-      <a v-if="previousContent.contentId" id="btn-prev-tool" title="上一章" class="prev js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + previousContent.contentId + '&bookId='+ previousContent.bookId"><i class="fa fa-angle-left"></i></a>
-      <a v-else id="btn-prev-tool" @click="setPreviousEnd" title="上一章" class="prev js-link-state" href="javascript:;"><i class="fa fa-angle-left"></i></a>
-      <a v-if="nextContent.contentId" id="btn-next-tool" title="下一章" class="next js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + nextContent.contentId + '&bookId='+ nextContent.bookId"><i class="fa fa-angle-right"></i></a>
-      <a v-else id="btn-next-tool" @click="setNextEnd" title="下一章" class="next js-link-state" href="javascript:;"><i class="fa fa-angle-right"></i></a>
-    </div>
+<div id="book-tool" class="book-tool" :style="'right:' + rightSize+';'" >
+  <div class="tool-top">
+    <a v-on:click="screenFn"  id="btn-screen-tool" title="全屏" class="fullscreen"><i class="fa fa-expand"></i></a>
   </div>
+  <div class="tool-bottom">
+    <a v-on:click="gotoCatalogFn" id="btn-menu-tool" title="目录" class="menu" :href="path.TemprootPath + '/view/catalog.html?bookId=' + bookcontent.bookId "><i class="fa fa-list"></i></a>
+    <a v-on:click="settingShow" id="btn-setting" title="设置" class="setting"><i class="fa fa-cog"></i></a>
+    <a v-on:click="lampFn" id="btn-light" title="夜间模式" class="light" ><i class="fa fa-lightbulb-o"></i></a>
+  </div>
+  <div class="tool-bottom">
+    <a v-if="previousContent.contentId" id="btn-prev-tool" title="上一章" class="prev js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + previousContent.contentId + '&bookId='+ previousContent.bookId"><i class="fa fa-angle-left"></i></a>
+    <a v-else id="btn-prev-tool" @click="setPreviousEnd" title="上一章" class="prev js-link-state" href="javascript:;"><i class="fa fa-angle-left"></i></a>
+    <a v-if="nextContent.contentId" id="btn-next-tool" title="下一章" class="next js-link-state" :href="path.TemprootPath + '/view/read_book.html?contentId=' + nextContent.contentId + '&bookId='+ nextContent.bookId"><i class="fa fa-angle-right"></i></a>
+    <a v-else id="btn-next-tool" @click="setNextEnd" title="下一章" class="next js-link-state" href="javascript:;"><i class="fa fa-angle-right"></i></a>
+  </div>
+</div>
+
 			</div>
 			<div class="inner-reader nene" style="min-height: 930px;">
 				<div class="loading-read"><div class="bg"></div></div>
@@ -169,6 +166,7 @@
 		var vueDemo = new Vue({
   			el: '#app',
   			data: {
+  			  rightSize: '450px',
   			  szxj: SZXJ,
   			  path: PathList,
   				fixed:false,
@@ -192,6 +190,16 @@
   				nextEnd: false,
   			},
   			methods: {
+  			  resizeFn: function() {
+  			    var width = document.body.clientWidth;
+  			    this.$set('rightSize',((width - 900) / 2 - 65) + 'px');
+  			    if (width < 1040) {
+  			      this.$set('rightSize',((width - 900) / 2 + 15) + 'px');
+  			    }
+  			    if (width < 900) {
+              this.$set('rightSize',25 + 'px');
+            }
+  			  },
   			  setNextEnd: function() {
   			    this.$set('nextEnd',true);
                 var This = this;
@@ -278,6 +286,7 @@
   					this.font_family = family;
   				},
   				lampFn: function(bj_color){
+  				  console.log(bj_color);
   					if (this.lamp){
   						this.temp_format_two[0] = this.temp_format[2];
   						this.temp_format_two[1] = this.temp_format[3];
@@ -345,10 +354,13 @@
 			    this.contentId = SZXJ.getQueryString('contentId');
 			    this.bookId = SZXJ.getQueryString('bookId');
        	  this.getValueFn();
+       	  var This = this;
+       	  this.resizeFn();
+          window.onresize = function() {
+            This.resizeFn();
+          }
       	},
-		});
-		
-
-		
+		});	
+    
 	</script>
 </html>
