--- a/view/catalog.html
+++ b/view/catalog.html
@@ -14,7 +14,7 @@
 	  v-show="bodyFlag" style="display: none;"
 		v-bind:style="popup === true? 'overflow:hidden':''">
     <alert v-ref:vue-alert></alert>
-	  <myheader></myheader>
+	  <myheader :login-img="loginImg"></myheader>
 		<div id="search"></div>
 		<div class="index" >
 			<div class="index_Line"></div>
@@ -85,7 +85,8 @@
 </style>
 <div class="text_input">
 	<ul class="clear">
-		<li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
+		<li class="user_head"><a href="javascript:;">
+		  <img src="../img/sss8.jpg" @load="szxj.loadImg(loginImg ? path.rootPath + loginImg: '', $event)"/></a></li>
 		<li style="position: relative;float: left;width: 555px;min-height: 60px;">
 		  <editor :id="'editor_'" v-ref:editor></editor>
 		</li>
@@ -93,25 +94,25 @@
 	</ul>
 	<div class="text_sort active">
 		<ul>
-			<li class="active">默认排序</li>
-			<li>按回复数</li>
+			<li :class="commentStatus === 0 ?'active':''" @click="setComment(0)">默认排序</li>
+			<li :class="commentStatus === 1 ?'active':''" @click="setComment(1)">按回复数</li>
 		</ul>
 	</div>
 </div>
 <div class="CommentArea"  v-for="obj in findCommentAndReply.comment">
   <div class="text_user clear">
-    <a href="javascript:;"><img src="../img/sss8.jpg"/ ></a>
+    <a href="javascript:;"><img src="../img/sss8.jpg" @load="szxj.loadImg(obj.userHead ? path.rootPath + obj.userHead: '', $event)"/ ></a>
     <ul class="mes_head">
       <li class="mes_head_user" >
-        <a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
-        <a v-if="$index === 0" v-else href="javascript:;" class="user_Top">置顶</a>
-        <a v-else href="javascript:;" class="user_Top_a">置顶</a>
+        <a href="javascript:;" class="user_a" title="">{{obj.userName}}</a>
+        <a v-if="$index === 0 && findCommentAndReply.strickie != '0'" href="javascript:;" class="user_Top">置顶</a>
+        <a v-if="obj.auth && findCommentAndReply.strickie == '0' " href="javascript:;" class="user_Top_a">置顶</a>
       </li>
       <li><span class="user_comment" style="display: block;white-space: normal;word-break:break-all;word-wrap:break-word;">{{{ obj.commentContent }}}</span></li>  
       <li>
         <ul class="updata_mes">
             <li class="mess1">{{ szxj.getLocalTime(obj.commentDate / 1000) }}</li>
-            <li class="mess2">回复</li>
+            <li class="mess2" @click="messageShow(obj.commentId)">回复</li>
             <li class="mess3">举报</li>
         </ul>
       </li>
@@ -119,14 +120,16 @@
   </div >
   
   <div class="text_userTow clear" style="position: relative;" v-for="temp in obj.replyEntityList">
-    <a href="javascript:;"><img src="../img/smallHead.png"/ ></a>
+    <a href="javascript:;"><img src="../img/smallHead.png" @load="szxj.loadImg(temp.userHead ? path.rootPath + temp.userHead: '', $event)" style="width: 36px;height: 36px;"/ ></a>
     <ul class="mes_head">
       
       <li class="mes_head_user" >
         <a href="javascript:;" class="user_a" title="">{{ temp.userName }}</a>
+      </li>
+      
       <li>
         <span class="user_comment"  title="">
-          <label v-if="obj.userId !== temp.userId" >回复<span class="aite_user">@{{ temp.replyUserName }}</span></label>
+          <label>回复<span class="aite_user">@{{ temp.replyUserName }}</span></label>
            
           {{{ temp.replyContent }}}
         
@@ -136,17 +139,17 @@
       <li>
         <ul class="updata_mes">
             <li class="mess1">{{ szxj.getLocalTime(temp.replyDate / 1000) }}</li>
-            <li class="mess2">回复</li>
+            <li class="mess2" @click="messageShow(temp.commentId)">回复</li>
             <li class="mess3">举报</li>
         </ul>
       </li>
     </ul>
   </div>
   
-  <ul class="Publish" :style="false ? 'visibility: ;':'display: none;'">
-    <li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
+  <ul class="Publish" :style="commentId === obj.commentId ? 'visibility: ;':'visibility: hidden;'">
+    <li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg" @load="szxj.loadImg(obj.userHead ? path.rootPath + obj.userHead: '', $event)"/></a></li>
     <li style="position: relative;float: left;width: 485px;min-height: 60px;">
-    <editor :id="'editor_'+$index"></editor>
+      <editor :id="'editor_' + obj.commentId" :editor.sync="obj.editor"></editor>
     </li>
     <li class="MessageBtn btn"><span style="line-height: 26px;">回复</span></li>
   </ul>
@@ -377,6 +380,7 @@
 var vuePractice = new Vue({
 	el: '#mask',
 	data: {
+	  loginImg: '',
 	  bodyFlag: false,
 	  zindex: 0,
 	  path: PathList,
@@ -402,8 +406,25 @@ var vuePractice = new Vue({
 		bookId: '',
 		userHead: '',
 		findCommentAndReply: [], // 评论字段
+		authorId: '',
+		commentId: '', // 根据评论id显示 回复输入框
+		commentStatus: 0, // 按回复数 或 按时间排序显示评论
 	},
 	methods: {
+	  messageShow: function(commentId) {
+	    this.commentId = commentId; // editor
+	    var editor = {};
+	    var index = 0;
+	    for (var i = 0; i < this.findCommentAndReply.comment.length; i++) {
+	      if (this.findCommentAndReply.comment[i].commentId === commentId) {
+	        editor = this.findCommentAndReply.comment[i].editor;
+	        index = 0;
+	        break;
+	      }
+	      // console.log(this.findCommentAndReply.comment[i].editor);
+	    }
+	    editor.$txt.html('<p><span style="color:#00A1D6;" contenteditable="false">回复@asdasd</span><span>&nbsp;<span></p>')
+	  },
 	  setPageCount: function(v) {
       var obj = this.findCommentAndReply;
       obj.pageCount =  v;
@@ -424,7 +445,16 @@ var vuePractice = new Vue({
       _data.bookId = this.id;
       _data.pageNo = v;
       _data.pageSize = 10;
-      _data.status = 0;
+      _data.status = this.commentStatus;
+      this.getComment(_data); // 请求
+    },
+    setComment(v) {
+      this.commentStatus = v;
+      var _data = {};
+      _data.bookId = this.id;
+      _data.pageNo = this.findCommentAndReply.pageNo;
+      _data.pageSize = 10;
+      _data.status = v;
       this.getComment(_data); // 请求
     },
     getComment(_data) {
@@ -439,7 +469,6 @@ var vuePractice = new Vue({
         }
         this.findCommentAndReply = response.data;
         this.findCommentAndReply.page = []; 
-        console.log(this.findCommentAndReply.pageNo);
         this.findCommentAndReply.pageNo = pageNo;
         // 计算评论的总页数
         if (this.findCommentAndReply.totalCount / _data.pageSize <= 1) {
@@ -456,22 +485,24 @@ var vuePractice = new Vue({
         }
         for (var i = 0; i < this.findCommentAndReply.comment.length;i++) {
           // 评论楼中楼
+          this.findCommentAndReply.comment[i].editor = {};
           this.findCommentAndReply.comment[i].page = [];
           this.findCommentAndReply.comment[i].pageNo = 1;
           // 计算评论楼中楼回复的总页数
           if (this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize <= 1) {
             this.findCommentAndReply.comment[i].pageCount = 1;
           } else {
-          if (this.findCommentAndReply.comment[i].replyEntityList.length % _data.pageSize === 0) {
-            this.findCommentAndReply.comment[i].pageCount = this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize;
-          } else {
-            this.findCommentAndReply.comment[i].pageCount = parseInt((this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize), 10) + 1;
+            if (this.findCommentAndReply.comment[i].replyEntityList.length % _data.pageSize === 0) {
+              this.findCommentAndReply.comment[i].pageCount = this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize;
+            } else {
+              this.findCommentAndReply.comment[i].pageCount = parseInt((this.findCommentAndReply.comment[i].replyEntityList.length / _data.pageSize), 10) + 1;
+            }
+          }
+          for (var j = 1; j <= this.findCommentAndReply.comment[i].pageCount;j++) {
+            this.findCommentAndReply.comment[i].page.push(j);
           }
         }
-        for (var j = 1; j <= this.findCommentAndReply.comment[i].pageCount;j++) {
-          this.findCommentAndReply.comment[i].page.push(j);
-        }
-      }
+        console.log(this.findCommentAndReply);
         });
     },
 	  saveComment: function() {
@@ -550,7 +581,7 @@ var vuePractice = new Vue({
       });
       _data.pageNo = 1;
       _data.pageSize = 10;
-      _data.status = 0;
+      _data.status = this.commentStatus;
       this.getComment(_data);
     },
 		rewardFn: function(){
